# TempQChain

./: .coverage  .gitignore  Makefile  README.md  data_models.py  debug.txt  logger.py  main.py  main_rel.py  pyproject.toml  reader.py  requirements.txt
data/: README.md
dataset_readers/: readers.py
domino_programs/: models.py  program_declaration.py  program_declaration_SPARTUN_FR.py  program_declaration_STEPGAME.py  program_new.py
domino_readers/: README.md  data_models.py  reader_classes.py  readers.py  utils.py
notebooks/: process_temp_data.ipynb
scripts/: calculate_story_tokensize.py
src/: logger.py  main.py  main_rel.py  temporal_FR.py  temporal_YN.py
src/domino_graphs/: graph_spartun_rel.py
src/domino_programs/: models.py  program_declaration.py  program_declaration_SPARTUN_FR.py  program_declaration_STEPGAME.py  program_new.py
src/domino_readers/: README.md  reader_classes.py  readers.py
src/graphs/: graph.py  graph_spartun_rel.py  graph_stepgame.py  graph_tb_dense.py  graph_tb_dense_FR.py
src/programs/: Program_tb_dense_YN.py  program_declaration.py  program_declaration_SPARTUN_FR.py  program_declaration_STEPGAME.py  program_new.py  program_tb_dense.py  program_tb_dense_FR.py  utils.py
src/readers/: data_models.py  file_loaders.py  reader_classes.py  utils.py
src/tempQchain/: main.py  temporal_FR.py  temporal_YN.py  train.py  utils.py
src/tempQchain/data/: create_tb_dense.py  utils.py
src/tempQchain/graphs/: graph.py  graph_tb_dense_FR.py  graph_tb_dense_YN.py
src/tempQchain/programs/: Program_tb_dense_YN.py  models.py  program.py  program_fr.py  program_tb_dense_FR.py  utils.py
src/tempQchain/readers/: data_models.py  file_loaders.py  reader_classes.py  temporal_reader.py  utils.py
temp_data/: create_tb_dense.py  data_utils.py  process_temp_data.ipynb
tests/: __init__.py  graph_fr.py  test_cuda.py  test_graph_fr.py  test_reader_utils.py
tests/cuda/: test_cuda.py
tests/dataset_readers/: test_integration_train_reader.py  test_reader_utils.py
tests/graphs/: conftest.py  graph_fr.py  run_tests.py  test_symmetric.py  test_transitive_determin.py  test_transitive_non_determin.py
tests/graphs/fr/: conftest.py  graph.py  test_symmetric.py  test_transitive_determin.py  test_transitive_non_determin.py
tests/graphs/yn/: conftest.py  graph.py  test_symmetric.py  test_transitive.py
tests/readers/: conftest.py  test_integration_train_reader.py  test_reader_utils.py  test_temporal_reader.py
