[project]
name = "spartunqchain"
version = "0.1.0"
description = "fork of original repo, same package version"
authors = [{ name = "Max Moser", email = "maxmoser.15@gmail.com" }]
requires-python = "==3.12,<4.0"
readme = "README.md"
dependencies = [
    "domiknows==0.533",
    "peft==0.10.0",
    "pandas==2.2.1",
    "numpy==1.26.4",
    "sentencepiece==0.2.0",
    "torch==2.2.1",
    "tqdm==4.66.2",
    "transformers==4.39.2",
    "spacy==3.7.4",
    "accelerate==0.29.1",
    "python-dotenv>=1.1.0,<2.0.0",
    "pytest==8.3.5",
    "pytest-cov>=5.0.0,<6",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "ipykernel>=6.30.0",
    "typer>=0.9.4",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = [
    ".",
    "src"
]

[tool.coverage.run]
branch = true
source = [
    "src"
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.hatch.build.targets.sdist]
include = [
    "src/readers",
    "src/graphs",
    "src/programs",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/readers",
    "src/graphs",
    "src/programs",
]

[tool.hatch.build.targets.wheel.sources]
"src/readers" = "readers"
"src/graphs" = "graphs"
"src/programs" = "programs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
extend-select = ["I"]
